@@ -60,21 +60,21 @@ public:
 		m_password = password;
 	}
 
-	void set_dst_name(std::string const& host)
+	void set_host(std::string const& host)
 	{
-		m_dst_name = host;
+		m_host = host;
 	}
 
 	void close(error_code& ec)
 	{
-		m_dst_name.clear();
+		m_host.clear();
 		proxy_base::close(ec);
 	}
 
 #ifndef BOOST_NO_EXCEPTIONS
 	void close()
 	{
-		m_dst_name.clear();
+		m_host.clear();
 		proxy_base::close();
 	}
 #endif
@@ -129,6 +129,10 @@ private:
 		std::back_insert_iterator<std::vector<char>> p(m_buffer);
 		std::string const endpoint = print_endpoint(m_remote_endpoint);
 		write_string("CONNECT " + endpoint + " HTTP/1.0\r\n", p);
+		if (!m_host.empty())
+		{
+			write_string("Host: " + m_host + "\r\n", p);
+		}
 		if (!m_user.empty())
 		{
 			write_string("Proxy-Authorization: Basic " + base64encode(
@@ -218,7 +222,7 @@ private:
 	// proxy authentication
 	std::string m_user;
 	std::string m_password;
-	std::string m_dst_name;
+	std::string m_host;
 
 	// this is true if the connection is HTTP based and
 	// want to talk directly to the proxy
